# developer-onboarding

./: .gitignore  README.md  run.sh
.obsidian/: workspace.json
00_현행_시스템_분석/: Ollama_분석_보고서.md
01_기획배경/: 03_AI_시대의_생산성과_더블링_타임.md  04_AI_시대의_제품_관리와_엔지니어의_역할.md  신입 개발자 고민.md
02_기획서/: 온보딩 웹 사이트 만들기.md
03_설계/: 01_데이터베이스_모델링.md  02_API_인터페이스_설계.md  03_LangGraph_노드_설계.md  07_프런트엔드_설계_및_관리자_기획.md  07_프로젝트_관리_계획.md  기술_아키텍처_제안서.md
04_개발표준/: JavaScript 개발표준.md
agent/: .gitignore  README.md  pyproject.toml
agent/src/: __init__.py  config.py  error_codes.py  graph_settings.json  graph_settings.py  main.py  test_rag.py  test_suggestions.py
agent/src/agent/: __init__.py  enhanced_nodes.py  graph.py  kanana_safeguard.py  nodes.py  rag_modules.py  state.py  tools.py
agent/src/api/: __init__.py  admin_routes.py  routes.py  schemas.py  websocket.py
agent/src/llm/: __init__.py  client.py
backend/: pom.xml
docs/background/: 01_신입_개발자_고민.md  02_개발자가_늘면_생산성이_2배가_된다.md  05_커리어_성장과_동료_네트워킹.md
docs/design/: 01_데이터베이스_모델링.md  02_API_인터페이스_설계.md  03_LangGraph_노드_설계.md  04_보안_및_권한_설계.md  05_상세_구현_일정.md  06_기술_스택_상세_사양.md  06_상세_사용자_시나리오.md  07_프런트엔드_설계_및_관리자_기획.md  08_AI_네이티브_세대_차별화_전략.md
docs/development/: rag_embedding_guide.md
docs/prd/: 01_온보딩_웹_사이트_만들기.md
docs/standards/: 인천플랫폼 개발표준.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: ai.js
rules/: javascript_standards.md  no_emojis.md  openlayers_guide.md
개발자 질문/: 개발자가 늘면 생산성이 2배가 된다?.md  온보딩 웹 사이트 만들기.md
설계/: 05_MVP_개발_계획.md
(+35 files in other folders)
